fix:padding-ul-overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,6 @@
 
 body{
     font-family: 'Poppins', sans-serif;
-    width: 100vh;
     background: var(--grey-1);
 }
 
@@ -94,7 +93,7 @@ ul{
     padding-left: 15px;
     list-style: none;
     overflow: auto; 
-    margin-bottom: 38px;
+    padding-bottom: 38px;
 }
 
 li{
@@ -356,6 +355,10 @@ aside{
 
 @media (min-width: 769px){
 
+    body{
+        width: 100vh;
+    }
+
     header{
         margin: 0;
         width: 100vw;
@@ -384,7 +387,7 @@ aside{
     }
 
     ul{
-        overflow: hidden;
+        width: 100%;
     }
     .products{
         width: 1050px;
